commit my files

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/images/logo2.jpeg" class="logo">
+                <img src="images/images/logo2.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -24,7 +24,7 @@
             </nav>
             <div class="header-text">
                 <p>Frontend Developer</p>
-                <h1>Hi, I'm <span>Sambhav Verma</span><br></h1>
+                <h1>Hi, I'm <span>Yuvika Verma</span><br></h1>
             </div>
             <div id="photo"></div>
         </div>
@@ -34,16 +34,15 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="images/images/Sambhav.jpg">
+                <img src="images/images/Yuvika.jpg">
             </div>
             <div class="about-col-2">
                 <h1 class="sub-title">About Me</h1>
-                <p>Hard-working , creative and proactive.
-                    Specialized in Computer Science
-                    Engineering. Ambitious, eager to keep
-                    growing and evolving in my profession.
-                    Constantly developing new skills and
-                    abilities.</p>
+                <p>A highly motivated and organized person.
+                    Specialized in Computer Science Engineering.
+                    Ambitious, eager to keep growing and
+                    evolving in my profession. Constantly
+                    developing new skills and abilities..</p>
                 <div class="tab-titles">
                     <p class="tab-links active-link" onclick="opentab('education')">Education</p>
                     <p class="tab-links" onclick="opentab('interpersonal')">Interpersonal Skills</p>
@@ -51,19 +50,20 @@
                 <div class="tab-contents active-tab" id="education">
                     <ul>
                         <li><span>Bachelors in Computer Science Engineering | DIT University,
-                            Dehradun</span><br>Session: 2020-2024 | Score: 8.13 CGPA</li>
+                            Dehradun</span><br>Session: 2020-2024 | Score: 8.16 CGPA</li>
                     
-                        <li><span>Intermediate (CBSE) |Meerut Public School, Meerut</span><br>Session: 2019-2020 | Percentage: 73%</li>
+                        <li><span>Intermediate (CBSE) |CDA Academy School, Basti</span><br>Session: 2019-2020 | Percentage: 72.6%</li>
                     
-                        <li><span>Matriculation (ICSE) | St. James School, Meerut</span><br>Session: 2017-2018 | Percentage: 66.5%</li>
+                        <li><span>Matriculation (ICSE) | St. Basil's School, Basti</span><br>Session: 2017-2018 | Percentage: 72.6%</li>
                     </ul>
                 </div>
                 <div class="tab-contents" id="interpersonal">
                     <ul>
-                        <li><span></span>Team Leadership</li>
-                        <li><span></span>Time Management</li>
-                        <li><span></span>Decision Making</li>
                         <li><span></span>Problem Solving</li>
+                        <li><span></span>Active Listening</li>
+                        <li><span></span>Decision Making</li>
+                        <li><span></span>Adaptability</li>
+                        <li><span></span>Time Management</li>
                     </ul>
                 </div>
             </div>
@@ -183,8 +183,8 @@
         <div class="row">
             <div class="contact-left">
                 <h1 class="sub-title">Contact Me</h1>
-                <p><i class="fa-solid fa-paper-plane"></i>sambhav.arya01@gmail.com</p>
-                <p><i class="fa-solid fa-phone"></i>+91 8476961940</p>
+                <p><i class="fa-solid fa-paper-plane"></i>yuvikauv14@gmail.com</p>
+                <p><i class="fa-solid fa-phone"></i>+91 6386884117</p>
                 <div class="social-icons">
                     <a href=""><i class="fa-brands fa-facebook"></i></a>
                     <a href=""><i class="fa-brands fa-instagram"></i></a>
