commit my files

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
   <!-- </div>
         <a href="#" class="btn">See More</a>
-    </div> --> 
+    </div> -->
 </div>
 
 <!------------Contact--------------->
@@ -205,7 +205,7 @@
         </div>
     </div>
     <div class="copyright">
-        <p>@Copyright <i class="fa-solid fa-copyright"></i> Sambhav. Made with<i class="fa-solid fa-heart" id="heart"></i> by Love</p>
+        <p>@Copyright <i class="fa-solid fa-copyright"></i> Yuvika. Made with<i class="fa-solid fa-heart" id="heart"></i> by Love</p>
     </div>
 </div>
 
